// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get Signal Detection by Station build a builder using getSignalDetectionsAndSegmentsByStationReducers 1`] = `
Map {
  "signalDetection/getSignalDetectionsAndSegmentsByStationAndTime/pending" => [Function],
  "signalDetection/getSignalDetectionsAndSegmentsByStationAndTime/fulfilled" => [Function],
  "signalDetection/getSignalDetectionsAndSegmentsByStationAndTime/rejected" => [Function],
}
`;

exports[`Get Signal Detection by Station build a builder using getSignalDetectionsAndSegmentsByStationReducers 2`] = `
{
  "queries": {
    "getSignalDetectionWithSegmentsByStationAndTime": {
      "stationName": {
        "12345": {
          "arg": {
            "station": {
              "name": "stationName",
            },
          },
          "error": undefined,
          "status": "pending",
        },
      },
    },
  },
}
`;

exports[`Get Signal Detection by Station build a builder using getSignalDetectionsAndSegmentsByStationReducers 3`] = `
{
  "queries": {
    "getSignalDetectionWithSegmentsByStationAndTime": {
      "stationName": {
        "12345": {
          "arg": {
            "station": {
              "name": "stationName",
            },
          },
          "error": undefined,
          "status": "fulfilled",
        },
      },
    },
  },
}
`;

exports[`Get Signal Detection by Station build a builder using getSignalDetectionsAndSegmentsByStationReducers 4`] = `
{
  "queries": {
    "getSignalDetectionWithSegmentsByStationAndTime": {
      "stationName": {
        "12345": {
          "arg": {
            "station": {
              "name": "stationName",
            },
          },
          "error": undefined,
          "status": "rejected",
        },
      },
    },
  },
}
`;

exports[`Get Signal Detection by Station will not execute query if the current interval is not defined 2`] = `
{
  "analyst": {
    "actionTargets": {
      "actionType": null,
      "eventIds": [],
      "previousActionTargets": [],
      "signalDetectionIds": [],
    },
    "alignWaveformsOn": "Time",
    "channelFilters": {},
    "currentPhase": null,
    "defaultSignalDetectionPhase": "P",
    "effectiveNowTime": null,
    "eventListOpenEventTriggered": false,
    "hotkeyCycleOverrides": {},
    "location": {
      "selectedLocationSolutionId": null,
      "selectedLocationSolutionSetId": null,
      "selectedPreferredLocationSolutionId": null,
      "selectedPreferredLocationSolutionSetId": null,
    },
    "mapOpenEventTriggered": false,
    "measurementMode": {
      "entries": {},
      "mode": "Default",
    },
    "openEventId": null,
    "openLayoutName": null,
    "phaseSelectorFavorites": {},
    "phaseSelectorPhaseList": null,
    "phaseToAlignOn": null,
    "requestTracker": {
      "completedRequests": 0,
      "initiatedRequests": 0,
      "lastRequestId": null,
      "requests": {},
    },
    "sdIdsToShowFk": [],
    "selectedEventIds": [],
    "selectedFilterIndex": null,
    "selectedFilterList": null,
    "selectedSdIds": [],
    "selectedSortType": "Station: A-Z",
  },
  "common": {
    "commandPaletteIsVisible": false,
    "glLayoutState": {},
    "keyPressActionQueue": {},
    "keyboardShortcutsVisibility": false,
    "selectedStationIds": [],
    "uniqueComponent": {},
  },
  "dataAcquisition": {
    "data": {
      "sohStatus": {
        "isStale": true,
        "lastUpdated": 0,
        "loading": true,
        "stationAndStationGroupSoh": {
          "isUpdateResponse": false,
          "stationGroups": [],
          "stationSoh": [],
        },
      },
    },
    "filtersToDisplay": {
      "soh-environment-channel-statuses": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
        "NONE": true,
      },
      "soh-environment-monitor-statuses": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
      },
      "soh-lag": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
      },
      "soh-missing": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
      },
      "soh-overview": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
        "NONE": true,
      },
      "soh-timeliness": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
      },
      "station-statistics": {
        "BAD": true,
        "GOOD": true,
        "MARGINAL": true,
        "NONE": true,
      },
    },
    "selectedAceiType": null,
    "selectedProcessingStation": null,
    "stationStatisticsColumns": {
      "Channel Issues": true,
      "Channel Lag": true,
      "Channel Missing": true,
      "Channel Timeliness": true,
      "Station": true,
      "Station Issues": true,
      "Station Lag": true,
      "Station Missing": true,
      "Station Timeliness": true,
    },
    "stationStatisticsGroup": undefined,
    "unmodifiedProcessingStation": null,
  },
  "events": {
    "displayedEventsConfiguration": {
      "edgeEventsAfterInterval": true,
      "edgeEventsBeforeInterval": true,
      "eventsCompleted": true,
      "eventsConflict": true,
      "eventsDeleted": null,
      "eventsRejected": null,
      "eventsRemaining": true,
    },
    "eventsColumns": {
      "activeAnalysts": true,
      "confidenceSemiMajorAxis": true,
      "confidenceSemiMinorAxis": true,
      "conflict": true,
      "coverageSemiMajorAxis": true,
      "coverageSemiMinorAxis": true,
      "deleted": true,
      "depthKm": true,
      "depthUncertainty": true,
      "latitudeDegrees": true,
      "longitudeDegrees": true,
      "magnitudeMb": true,
      "magnitudeMl": true,
      "magnitudeMs": true,
      "numberAssociated": true,
      "numberDefining": true,
      "observationsStandardDeviation": true,
      "preferred": true,
      "region": true,
      "rejected": true,
      "status": true,
      "time": true,
      "timeUncertainty": true,
      "unsavedChanges": true,
    },
  },
  "map": {
    "coordinates": null,
    "isSyncedWithWaveformZoom": false,
    "layerVisibility": {
      "associatedCompleteDetection": true,
      "associatedOpenDetection": true,
      "associatedOtherDetection": true,
      "confidenceEllipse": true,
      "coverageEllipse": true,
      "deletedDetection": null,
      "edgeDetectionAfter": true,
      "edgeDetectionBefore": true,
      "edgeEventsAfterInterval": true,
      "edgeEventsBeforeInterval": true,
      "events": true,
      "eventsDeleted": null,
      "eventsRejected": null,
      "nonPreferredLocationSolution": false,
      "preferredLocationSolution": true,
      "signalDetections": true,
      "sites": false,
      "stations": true,
      "unassociatedDetection": true,
    },
  },
  "signalDetections": {
    "displayedSignalDetectionConfiguration": {
      "signalDetectionAfterInterval": true,
      "signalDetectionAssociatedToCompletedEvent": true,
      "signalDetectionAssociatedToOpenEvent": true,
      "signalDetectionAssociatedToOtherEvent": true,
      "signalDetectionBeforeInterval": true,
      "signalDetectionConflicts": true,
      "signalDetectionDeleted": null,
      "signalDetectionUnassociated": true,
      "syncWaveform": false,
    },
    "signalDetectionsColumns": {
      "amplitude": true,
      "assocStatus": true,
      "azimuth": true,
      "azimuthStandardDeviation": true,
      "channel": true,
      "conflict": true,
      "deleted": true,
      "emergenceAngle": false,
      "longPeriodFirstMotion": false,
      "period": true,
      "phase": true,
      "phaseConfidence": false,
      "rectilinearity": false,
      "sNR": true,
      "shortPeriodFirstMotion": false,
      "slowness": true,
      "slownessStandardDeviation": true,
      "station": true,
      "time": true,
      "timeStandardDeviation": true,
      "unsavedChanges": true,
    },
  },
  "stationPropertiesConfiguration": {
    "channelConfigurationColumns": {
      "calibrationEffectiveAt": true,
      "calibrationFactor": true,
      "calibrationPeriod": true,
      "calibrationResponseId": true,
      "calibrationStandardDeviation": true,
      "calibrationTimeShift": true,
      "channelBandType": false,
      "channelDataType": false,
      "channelInstrumentType": false,
      "channelOrientationCode": false,
      "channelOrientationType": false,
      "depthKm": true,
      "description": true,
      "eastDisplacementKm": true,
      "effectiveAt": true,
      "effectiveUntil": true,
      "elevationKm": true,
      "fapResponseId": true,
      "latitudeDegrees": true,
      "longitudeDegrees": true,
      "name": true,
      "nominalSampleRateHz": true,
      "northDisplacementKm": true,
      "orientationHorizontalDegrees": true,
      "orientationVerticalDegrees": true,
      "units": true,
      "verticalDisplacementKm": true,
    },
    "channelGroupConfigurationColumns": {
      "depthKm": true,
      "description": true,
      "effectiveAt": true,
      "effectiveUntil": true,
      "elevationKm": true,
      "latitudeDegrees": true,
      "longitudeDegrees": true,
      "name": true,
      "type": true,
    },
    "selectedEffectiveAtIndex": 0,
  },
  "systemMessage": {
    "isSoundEnabled": true,
    "lastUpdated": null,
    "latestSystemMessages": null,
    "systemMessages": null,
  },
  "userSession": {
    "authenticationStatus": {
      "authenticated": false,
      "authenticationCheckComplete": false,
      "failedToConnect": false,
      "userName": null,
    },
    "connected": true,
  },
  "waveform": {
    "baseStationTime": 0,
    "channelFilters": {},
    "currentStationGroupStationNames": [],
    "displayedSignalDetectionConfiguration": {
      "signalDetectionAfterInterval": true,
      "signalDetectionAssociatedToCompletedEvent": true,
      "signalDetectionAssociatedToOpenEvent": true,
      "signalDetectionAssociatedToOtherEvent": true,
      "signalDetectionBeforeInterval": true,
      "signalDetectionConflicts": true,
      "signalDetectionDeleted": null,
      "signalDetectionUnassociated": true,
    },
    "loadingState": {
      "completed": 0,
      "description": "Loading waveforms",
      "isLoading": false,
      "percent": 0,
      "total": 0,
    },
    "maskVisibility": {},
    "maximumOffset": 0,
    "minimumOffset": 0,
    "shouldShowPredictedPhases": true,
    "shouldShowTimeUncertainty": false,
    "stationsVisibility": {},
    "viewableInterval": null,
    "viewportVisibleStations": [],
    "zoomInterval": null,
  },
  "workflow": {
    "analysisMode": null,
    "openActivityNames": [],
    "openIntervalName": null,
    "stationGroup": null,
    "timeRange": {
      "endTimeSecs": null,
      "startTimeSecs": null,
    },
  },
}
`;
